= 2.3.5 = * Fixed an issue when the user agent server variable is not set. * Reporter Lens: Improved the reliability of and Lazy Loading when using crossfade. * Fixed a potential file inclusion vulnerability reported by one of our users. * Added the ability to filter the admin roles for SlideDeck with: `add_filter( 'slidedeck_roles', 'function' );`
git-svn-id: https://plugins.svn.wordpress.org/slidedeck2/trunk@800083 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/slidedeck-admin-lite.css
+++ b/css/slidedeck-admin-lite.css
@@ -334,12 +334,24 @@ along with SlideDeck.  If not, see <http://www.gnu.org/licenses/>.
 
 #slidedeck-section-lenses .upgrade-license-lenses span.shadow {
     display: block;
-position: absolute;
-top: 122px;
-left: 50%;
-margin-left: -87px;
-width: 170px;
-height: 10px;
-background: url('../images/lens-thumbnail-shadow.png') center center no-repeat;
-z-index: 1;
+    position: absolute;
+    top: 122px;
+    left: 50%;
+    margin-left: -87px;
+    width: 170px;
+    height: 10px;
+    background: url('../images/lens-thumbnail-shadow.png') center center no-repeat;
+    z-index: 1;
+}
+
+#slidedeck-manage-footer {
+    border: none;
+    background: transparent;
+    margin: 0;
+    padding: 0;
+    max-width: 980px;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    -o-box-shadow: none;
+    box-shadow: none;
 }
